@@ -2,6 +2,7 @@ package com.lane.interview.algorithm_workbook.p18_leetcode高频题;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -28,42 +29,29 @@ public class Q08_全组合 {
             }
         }
     }
-
-    // https://leetcode.cn/problems/combination-sum/description/
-    /*
-    * 示例 1：
-      输入：candidates = [2,3,6,7], target = 7
-      输出：[[2,2,3],[7]]
-      解释：
-      2 和 3 可以形成一组候选，2 + 2 + 3 = 7 。注意 2 可以使用多次。
-      7 也是一个候选， 7 = 7 。
-      仅有这两种组合。
-    *
-    * */
-    // 剪枝优化
+    // [1,n]范围，每次取k个数
     class Solution1 {
-        public List<List<Integer>> combinationSum(int[] candidates, int target) {
-            List<List<Integer>> res = new ArrayList<>();
-            Arrays.sort(candidates); // 先进行排序
-            backtracking(res, new ArrayList<>(), candidates, target, 0, 0);
-            return res;
+        List<List<Integer>> result = new ArrayList<>();
+        LinkedList<Integer> path = new LinkedList<>();
+        public List<List<Integer>> combine(int n, int k) {
+            combineHelper(n, k, 1);
+            return result;
         }
 
-        public void backtracking(List<List<Integer>> res, List<Integer> path, int[] candidates, int target, int sum, int idx) {
-            // 找到了数字和为 target 的组合
-            if (sum == target) {
-                res.add(new ArrayList<>(path));
+        /**
+         * 每次从集合中选取元素，可选择的范围随着选择的进行而收缩，调整可选择的范围，就是要靠startIndex
+         * @param startIndex 用来记录本层递归的中，集合从哪里开始遍历（集合就是[1,...,n] ）。
+         */
+        private void combineHelper(int n, int k, int startIndex){
+            //终止条件
+            if (path.size() == k){
+                result.add(new ArrayList<>(path));
                 return;
             }
-
-            for (int i = idx; i < candidates.length; i++) {
-                // 如果 sum + candidates[i] > target 就终止遍历
-                if (sum + candidates[i] > target) {
-                    break;
-                }
-                path.add(candidates[i]);
-                backtracking(res, path, candidates, target, sum + candidates[i], i);
-                path.remove(path.size() - 1); // 回溯，移除路径 path 最后一个元素
+            for (int i = startIndex; i <= n - (k - path.size()) + 1; i++){
+                path.add(i);
+                combineHelper(n, k, i + 1);
+                path.removeLast();
             }
         }
     }
